<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.hedgehogproductions.therapyguide.ProgressiveViewPager
        android:id="@+id/editkindnessentry_pager"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@+id/editkindnessentry_back_button"/>

    <Button
        android:id="@+id/editkindnessentry_back_button"
...
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:textColor="@android:color/black"
        android:text="@string/kindness_back_button_text"/>

    <Button
        android:id="@+id/editkindnessentry_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/editkindnessentry_back_button"
        android:layout_toRightOf="@id/editkindnessentry_back_button"
        android:layout_toStartOf="@id/editkindnessentry_next_button"
        android:layout_toLeftOf="@id/editkindnessentry_next_button"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:textColor="@android:color/black"
        android:text="@string/kindness_cancel_button_text"/>

...
