...
        android:id="@+id/kindness_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/KindnessInstructionText" />

    <ListView
        android:id="@+id/kindness_list"
        android:choiceMode="singleChoice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
